<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_mode">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="back_arrow">Стрелка назад</string>
    <string name="url_practicum">https://practicum.yandex.ru/android-developer/</string>
    <string name="url_user_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="title_mail_to_developer">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="thanks_to_developer">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email_of_developer">civ02dk@yandex.ru</string>
    <string name="enter_track">Выбрать трек</string>
    <string name="album_cover">Обложка альбома</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="connection_problems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="clear">Очистить</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="thirty_seconds">00:00</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="button_play">Кнопка Играть</string>
    <string name="add_to_favourites">Добавить в избранное</string>
    <string name="media_empty">Ваша медиатека пуста</string>
    <string name="playlist_empty">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favourites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist_cover">Обложка плейлиста</string>
    <string name="name_star">Название*</string>
    <string name="Description">Описание</string>
    <string name="create">Создать</string>
    <string name="cover">Обложка</string>
    <string name="need_permission">Разрешение на доступ к файлам необходимо для выбора обложки плейлиста</string>
    <string name="added_in_playlist">Добавлено в плейлист %s</string>
    <string name="not_added_in_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="finalize_playlist">Завершить создание плейлиста?</string>
    <string name="unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finalize">Завершить</string>
    <string name="want_delete_track">Хотите удалить трек?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="no_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="no_tracks_short">В этом плейлисте нет треков</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="want_delete_playlist">Хотите удалить плейлист?</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>

    <plurals name="number_of_tracks">
        <item quantity="one">трек</item>
        <item quantity="few">трека</item>
        <item quantity="many">треков</item>
        <item quantity="other">треков</item>
    </plurals>

    <plurals name="number_of_minutes">
        <item quantity="one">минута</item>
        <item quantity="few">минуты</item>
        <item quantity="many">минут</item>
        <item quantity="other">минут</item>
    </plurals>
</resources>