<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".settings.ui.fragment.SettingsFragment">

    <TextView
        style="@style/HeadText"
        android:text="@string/settings" />

    <FrameLayout
        android:id="@+id/dark_theme_frame"
        style="@style/SettingsFrameLayout"
        android:layout_marginTop="40dp"
        android:paddingEnd="18dp">

        <TextView
            style="@style/SettingsTextView"
            android:text="@string/dark_mode" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/theme_switcher"
            style="@style/SettingsImageViewSwitch" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/share_frame"
        style="@style/SettingsFrameLayout"
        android:foreground="?attr/selectableItemBackground"
        android:paddingEnd="16dp">

        <TextView
            style="@style/SettingsTextView"
            android:text="@string/share" />

        <ImageView
            style="@style/SettingsImageViewSwitch"
            android:contentDescription="@string/share"
            android:src="@drawable/share" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/support_frame"
        style="@style/SettingsFrameLayout"
        android:foreground="?attr/selectableItemBackground"
        android:paddingEnd="14dp">

        <TextView
            style="@style/SettingsTextView"
            android:text="@string/support" />

        <ImageView
            style="@style/SettingsImageViewSwitch"
            android:contentDescription="@string/support"
            android:src="@drawable/support" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/agreement_frame"
        style="@style/SettingsFrameLayout"
        android:foreground="?attr/selectableItemBackground"
        android:paddingEnd="20dp">

        <TextView
            style="@style/SettingsTextView"
            android:text="@string/user_agreement" />

        <ImageView
            style="@style/SettingsImageViewSwitch"
            android:contentDescription="@string/user_agreement"
            android:src="@drawable/right_arrow" />
    </FrameLayout>

</LinearLayout>