<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="@dimen/main_paddingTop">

        <ImageView
            android:id="@+id/settings_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="4dp"
            android:src="@drawable/left_arrow"
            app:tint="@color/app_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/settings"
            android:textColor="@color/app_black"
            android:textSize="@dimen/main_text_size" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingVertical="@dimen/settings_padding_vert"
        android:paddingStart="@dimen/settings_padding_start"
        android:paddingEnd="18dp">

        <TextView
            android:text="@string/dark_mode"
            style="@style/SettingsTextView"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:thumbTint="@color/settings"
            android:trackTint="@color/switch_track"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/settings_padding_vert"
        android:paddingStart="@dimen/settings_padding_start"
        android:paddingEnd="16dp">

        <TextView
            android:text="@string/share"
            style="@style/SettingsTextView"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/share"
            app:tint="@color/settings" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/settings_padding_vert"
        android:paddingStart="@dimen/settings_padding_start"
        android:paddingEnd="14dp">

        <TextView
            android:text="@string/support"
            style="@style/SettingsTextView"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/support"
            app:tint="@color/settings" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/settings_padding_vert"
        android:paddingStart="@dimen/settings_padding_start"
        android:paddingEnd="20dp">

        <TextView
            android:text="@string/user_agreement"
            style="@style/SettingsTextView"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/right_arrow"
            app:tint="@color/settings" />
    </FrameLayout>

</LinearLayout>