<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".createplaylist.ui.fragment.CreatePlaylistFragment">

    <ImageButton
        android:id="@+id/buttonBackNewPlaylist"
        android:layout_width="@dimen/size_back_arrow"
        android:layout_height="@dimen/size_back_arrow"
        android:layout_marginStart="@dimen/margin_back_arrow"
        android:layout_marginTop="@dimen/margin_back_arrow"
        android:background="@null"
        android:clickable="true"
        android:contentDescription="@string/back_arrow"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/padding_back_arrow"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left_arrow"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/newPlayListHead"
        style="@style/HeadTextNewPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/search_placeholder_tv_margin_horizontal"
        android:text="@string/new_playlist"
        app:layout_constraintBottom_toBottomOf="@id/buttonBackNewPlaylist"
        app:layout_constraintStart_toEndOf="@id/buttonBackNewPlaylist"
        app:layout_constraintTop_toTopOf="@id/buttonBackNewPlaylist" />

    <View
        android:id="@+id/newCover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/search_placeholder_tv_margin_horizontal"
        android:layout_marginTop="@dimen/margin_top_cover_player"
        android:background="@drawable/new_cover_layer_list"
        app:layout_constraintBottom_toTopOf="@id/ilNamePlaylist"
        app:layout_constraintDimensionRatio="W,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilNamePlaylist"
        style="@style/TextInputLayoutNewPlaylist"
        android:layout_marginTop="@dimen/margin_32"
        android:hint="@string/name_star"
        app:layout_constraintBottom_toTopOf="@id/ilDescriptionPlaylist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newCover">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNamePlaylist"
            style="@style/EditTextNewPlaylist" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilDescriptionPlaylist"
        style="@style/TextInputLayoutNewPlaylist"
        android:layout_marginTop="@dimen/button_top"
        android:hint="@string/Description"
        app:layout_constraintBottom_toTopOf="@id/btnCreateNewPlaylist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ilNamePlaylist">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescriptionPlaylist"
            style="@style/EditTextNewPlaylist" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCreateNewPlaylist"
        style="@style/CreatePlaylistButton"
        android:backgroundTint="@color/main_background"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ilDescriptionPlaylist" />


</androidx.constraintlayout.widget.ConstraintLayout>